# vivyshot

./: .clabot  .gitignore  .gitleaks.toml  AGENTS.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-APPSTORE.md  README.md  SECURITY.md  SPEC.md  THIRD_PARTY_NOTICES.md
.github/: FUNDING.yml
VivyShotKit.xcframework/: Info.plist
core-rs/: Cargo.toml  cbindgen.toml
docs/: capture-history-spec.md  capture-statistics-spec.md  ffi-abi-policy.md  paid-capture-overlays-and-effects-spec.md  perf.md  post-recording-export-options-spec.md  pro-preview-and-export-trial-spec.md  recording-preview-polish-spec.md  rust-core-ffi-refactor-spec.md  rust-core-native-surface-video-refactor-spec.md  rust-core-test-matrix.md  smart-capture-selection-spec.md  video-editor-spec.md  video-gif-recorder-spec.md
ffi/: vivyshot_core.h
macos/: LICENSE  project.yml
scripts/: build-rust-universal.sh  build-rust.sh  build-xcframework.sh  ci-bench-gate.sh  gen-ffi.sh  (+4 more)
vivyshot-rs/: Cargo.toml  README.md
vivyshot-rs/crates/vivyshot-core/: Cargo.toml
vivyshot-rs/crates/vivyshot-core/src/: document.rs  geometry.rs  lib.rs  stats.rs  stitch.rs  timeline.rs  types.rs  video.rs
vivyshot-rs/crates/vivyshot-ffi/: Cargo.toml  cbindgen.toml
vivyshot-rs/crates/vivyshot-ffi/src/: abi.rs  common.rs  document.rs  encode.rs  geometry.rs  lib.rs  stats.rs  stitch.rs  tests.rs  timeline.rs  video.rs  video_project.rs
vivyshot-rs/crates/vivyshot-ffi/src/ffi/: document.rs  domain.rs  encode.rs  geometry.rs  mod.rs  stitch.rs  timeline.rs  video.rs
vivyshot-rs/crates/vivyshot-ffi/tests/: document_ffi_contract.rs  property_geometry.rs  stitch_ffi_contract.rs  timeline_ffi_contract.rs  video_ffi_contract.rs
vivyshot-rs/crates/vivyshot-ffi/tests/common/: mod.rs
vivyshot-rs/tests/: document_ffi_contract.rs  geometry_ffi_contract.rs  timeline_ffi_contract.rs  video_ffi_contract.rs
(+135 files in other folders)
