[package]
name = "vivyshot-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vivy-company/vivyshot"

[lib]
name = "vivyshot_domain"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
time = "0.3"

[dev-dependencies]
proptest = "1.5"
