[package]
name = "vivyshot-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "vivyshot_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
font8x8 = "0.3"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vivyshot_domain = { package = "vivyshot-core", path = "../vivyshot-core" }

[dev-dependencies]
proptest = "1.5"
